[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aussteller-liste"
version = "0.1.0"
description = "Scrape exhibitor lists from trade fair websites"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "openai>=1.10",
    "pydantic>=2.5",
    "typer[all]>=0.9",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[project.scripts]
aussteller = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]
